# ferrum-edge

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CUSTOM_PLUGINS.md  Cargo.toml  Cross.toml  DATABASE_SCHEMA_ANALYSIS.md  DOCUMENTATION_UPDATES_SUMMARY.md  Dockerfile  Dockerfile.release  Dockerfile.test  Dockerfile.test.dockerignore  FEATURES.md  IMPLEMENTATION_ANALYSIS.md  LICENSE  LICENSE-COMMERCIAL.md  README.md  REFACTORING_PLAN.md  REQUIREMENTS.md  SECURITY.md  WEBSOCKET.md  WEBSOCKET_IMPLEMENTATION.md  build.rs  docker-compose.tls-test.yml  docker-compose.yml  ferrum.conf  openapi.yaml  rust-toolchain.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security.yml
.github/workflows/: ci.yml  cleanup-pending-reviews.yml  comparison-benchmark.yml  gateways-protocol-benchmark.yml  payload-size-benchmark.yml  perf-benchmark.yml  prune-stale-prs.yml  release.yml  scale-benchmark.yml
comparison/: Dockerfile.ferrum-bench  Dockerfile.pingora-bench  README.md  run_comparison.sh
comparison/configs/: ferrum_comparison.yaml  ferrum_comparison_e2e_tls.yaml  ferrum_comparison_key_auth.yaml  kong.yaml  kong_e2e_tls.yaml  kong_key_auth.yaml
comparison/configs/pingora/: Cargo.toml
comparison/configs/pingora/src/: main.rs
comparison/lua/: comparison_test_post.lua  comparison_test_post_key_auth.lua
comparison/scripts/: generate_comparison_report.py
custom_plugins/: example_audit_plugin.rs  example_plugin.rs  mod.rs
docs/: admin_api.md  admin_backup_restore.md  admin_batch_api.md  admin_metrics.md  admin_read_only_mode.md  api_specs.md  backend_mtls.md  cache_management.md  ci_cd.md  cli.md  client_ip_resolution.md  configuration.md  connection_pooling.md  cors_plugin.md  cp_dp_mode.md  database_tls.md  dns_resolver.md  docker.md  error_classification.md  frontend_tls.md  functional_testing.md  functional_testing_auth_acl.md  functional_testing_database.md  functional_testing_file_mode.md  functional_testing_load_stress.md  graceful_shutdown.md  http3.md  infrastructure_sizing.md  kubernetes_deployment.md  load_balancing.md  migrations.md  mongodb.md  multi_region_ha.md  overload_manager.md  pingora_comparison.md  plugin_execution_order.md  plugins.md  response_body_streaming.md  retry.md  routing.md  (+3 more)
docs/plans/: test_framework_scripted_backends.md
docs/upstream-h3-patches/: README.md
examples/: config.yaml
perftest/: README.md  backend_results.txt  health_results.txt  performance_report.html  run_perf_test.sh  users_results.txt
proto/: ferrum.proto  health.proto
src/: adaptive_buffer.rs  circuit_breaker.rs  cli.rs  config_delta.rs  connection_pool.rs  consumer_index.rs  date_cache.rs  health_check.rs  lazy_timeout.rs  lib.rs  load_balancer.rs  main.rs  metrics.rs  overload.rs  plugin_cache.rs  retry.rs  router_cache.rs  socket_opts.rs  startup.rs  tls_offload.rs
src/admin/: backup.rs  crud.rs  jwt_auth.rs  mod.rs  spec_codec.rs
src/config/: conf_file.rs  config_backup.rs  config_migration.rs  db_backend.rs  db_loader.rs  env_config.rs  file_loader.rs  (+6 more)
tests/: README.md  access_control_tests.rs  admin_cached_config_tests.rs  admin_tests.rs  backend_mtls_tests.rs  basic_auth_tests.rs  config.yaml  config_types_tests.rs  connection_pool_tests.rs  consumer_index_tests.rs  cp_dp_grpc_tests.rs  dns_tests.rs  env_config_tests.rs  functional_tests.rs  http3_integration_tests.rs  http_logging_tests.rs  integration_tests.rs  jwt_auth_plugin_tests.rs  key_auth_tests.rs  oauth2_auth_tests.rs  plugin_cache_tests.rs  plugin_integration_tests.rs  plugin_utils.rs  proxy_tests.rs  rate_limiting_tests.rs  request_transformer_tests.rs  response_transformer_tests.rs  secure_echo_server_simple.rs  stdout_logging_tests.rs  transaction_debugger_tests.rs  websocket_echo_server.rs  websocket_gateway_test.rs
tests/performance/: Cargo.toml  README.md  backend_results.txt  backend_server.rs  backend_test.lua  baseline.json  ci_overhead_bench.py  ci_perf_test.sh  compare_baselines.py  generate_report.py  health_results.txt  health_test.lua  parse_wrk_results.py  perf_config.yaml  performance_report.html  quick_test.sh  quick_test.txt  run_perf_test.sh  users_results.txt  users_test.lua
tests/performance/multi_protocol/: .gitignore  Cargo.toml  README.md  build.rs  proto_backend.rs  proto_bench.rs  run_all_protocol_tests.sh  run_gateway_protocol_bench.sh  run_protocol_test.sh
tests/performance/multi_protocol/configs/: grpc_perf.yaml  grpcs_e2e_perf.yaml  http1_perf.yaml  http1_tls_e2e_perf.yaml  http1_tls_perf.yaml  http2_perf.yaml  http3_perf.yaml  tcp_perf.yaml  tcp_tls_e2e_perf.yaml  tcp_tls_perf.yaml  udp_dtls_e2e_perf.yaml  udp_dtls_perf.yaml  udp_perf.yaml  ws_perf.yaml  wss_e2e_perf.yaml
tests/performance/multi_protocol/configs/envoy/: grpc.yaml  grpcs.yaml  http1.yaml  http1_tls.yaml  http2_tls.yaml  http3.yaml  tcp.yaml  tcp_tls.yaml  udp.yaml  ws.yaml  wss.yaml
tests/performance/multi_protocol/configs/kong/: grpcs.yaml  http1_tls.yaml  tcp_tls.yaml  udp.yaml  wss.yaml
tests/performance/multi_protocol/configs/krakend/: http1_tls.json  http2_tls.json
tests/performance/multi_protocol/configs/tyk/: tyk.conf
tests/performance/multi_protocol/configs/tyk/apps_grpcs/: echo_api.json
tests/performance/multi_protocol/configs/tyk/apps_http1_tls/: echo_api.json
tests/performance/multi_protocol/configs/tyk/apps_http2_tls/: echo_api.json
tests/performance/multi_protocol/configs/tyk/apps_tcp_tls/: echo_tcp.json
tests/performance/multi_protocol/configs/tyk/apps_wss/: echo_api.json
tests/performance/multi_protocol/src/: lib.rs  metrics.rs  tls_utils.rs
tests/performance/payload_size/: .gitignore  Cargo.toml  README.md  build.rs  payload_backend.rs  payload_bench.rs  run_payload_test.sh
tests/performance/payload_size/configs/: grpc_perf.yaml  http1_perf.yaml  http2_perf.yaml  http3_perf.yaml  tcp_perf.yaml  udp_perf.yaml  ws_perf.yaml
tests/performance/payload_size/proto/: bench.proto
tests/performance/payload_size/src/: lib.rs  metrics.rs  payload_gen.rs  tls_utils.rs
(+422 files in other folders)
