[package]
name = "ferrum-edge"
version = "0.9.0"
edition = "2024"
description = "A high-performance edge proxy built in Rust"
license = "PolyForm-Noncommercial-1.0.0"

[[bin]]
name = "ferrum-edge"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body = "1"
http-body-util = "0.1"
http = "1"

# TLS
ring = "0.17"
rustls = { version = "0.23", features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "1.0"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# gRPC
tonic = { version = "0.14.5", features = ["tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14.5"
prost = "0.14.3"

# JWT and auth
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.19"
argon2 = "0.5"

# LDAP
ldap3 = "0.12"
native-tls = "0.2"

# WebSocket
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP/3 / QUIC
quinn = "0.11.9"
h3 = "0.0.8"
h3-quinn = "0.0.10"

# Time/date
chrono = { version = "0.4", features = ["serde"] }

# Other utilities
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
arc-swap = "1"
bytes = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
pin-project-lite = "0.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }
base64 = "0.22"
url = "2"
percent-encoding = "2"
socket2 = { version = "0.6.3", features = ["all"] }
tokio-util = { version = "0.7.18", default-features = false }
prost-reflect = "0.16"
brotli = "8"
flate2 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto
sha2 = "0.11.0"
hmac = "0.13.0"
hex = "0.4"
x509-parser = "0.18"

# Secrets management
vaultrs = "0.8"
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1"
google-cloud-secretmanager-v1 = "1.7"
azure_security_keyvault_secrets = "0.12"
azure_identity = "0.33"
azure_core = "0.33"

# Redis (centralized rate limiting across multiple gateway instances)
redis = { version = "1", features = ["tokio-rustls-comp", "tls-rustls-insecure", "connection-manager"] }

# Kafka (kafka_logging plugin)
rdkafka = { version = "0.39", features = ["cmake-build", "zstd"] }

# MongoDB (NoSQL database backend)
mongodb = "3"

# DTLS 1.2/1.3 (secure UDP) — Sans-IO state machine
dimpl = { version = "0.5.0", features = ["aws-lc-rs", "rcgen"] }

# Memory allocator — jemalloc reduces fragmentation and improves throughput
# under high concurrency (50k+ connections). Not available on Windows.
[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6"

# ── Build profiles ─────────────────────────────────────────────────────────
# Dev: optimise for fast compile-edit-run cycles
[profile.dev]
opt-level = 0
debug = true            # full debuginfo for local development
incremental = true      # incremental compilation for faster rebuilds
# Split debuginfo to speed up linking (macOS/Linux)
split-debuginfo = "unpacked"

# Release: optimise for runtime performance
[profile.release]
opt-level = 3
lto = "thin"            # thin LTO: good optimisation without huge link times
codegen-units = 16      # more parallelism during codegen (trade a tiny bit of perf)
strip = true            # strip symbols — smaller binary
incremental = false     # disable incremental for deterministic release builds

# CI-specific: fast release builds for testing (not shipping)
[profile.ci-release]
inherits = "release"
lto = "off"             # skip LTO entirely — biggest time saver
codegen-units = 256     # maximise codegen parallelism
strip = true
opt-level = 2           # still optimised, but less aggressive

[build-dependencies]
tonic-prost-build = "0.14.5"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
# Functional testing dependencies
rand = "0.10"
futures = "0.3"
rcgen = "0.14"
time = "0.3"
# Simple HTTP server dependencies
tokio = { version = "1", features = ["net", "io-util", "time", "rt"] }
