[package]
name = "ferrum-edge"
version = "0.9.0"
edition = "2024"
description = "A high-performance edge proxy built in Rust"
license = "PolyForm-Noncommercial-1.0.0"

[[bin]]
name = "ferrum-edge"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }

# HTTP
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body = "1"
http-body-util = "0.1"
http = "1"

# TLS
ring = "0.17"
rustls = { version = "0.23", features = ["ring", "std"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
webpki-roots = "1.0"
zeroize = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "sqlite", "chrono", "json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# gRPC
tonic = { version = "0.14.5", features = ["tls-ring", "tls-webpki-roots"] }
tonic-prost = "0.14.5"
prost = "0.14.3"
tower = { version = "0.5", features = ["util"] }

# JWT and auth
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
bcrypt = "0.19"
argon2 = "0.5"

# LDAP
ldap3 = "0.12"
native-tls = "0.2"
openssl = { version = "0.10", features = ["vendored"] }

# WebSocket
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# HTTP/3 / QUIC
quinn = "0.11.9"
h3 = "0.0.8"
h3-quinn = "0.0.10"

# Time/date
chrono = { version = "0.4", features = ["serde"] }
httpdate = "1"

# Other utilities
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
ahash = "0.8"
arc-swap = "1"
bytes = "1"
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
pin-project-lite = "0.2"
reqwest = { version = "0.13", features = ["json", "rustls", "stream"] }
hickory-resolver = { version = "0.26", features = ["tokio", "system-config"] }
base64 = "0.22"
url = "2"
percent-encoding = "2"
socket2 = { version = "0.6.3", features = ["all"] }
tokio-util = { version = "0.7.18", default-features = false }
prost-reflect = "0.16"
brotli = "8"
flate2 = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Crypto
sha2 = "0.11.0"
hmac = "0.13.0"
hex = "0.4"
x509-parser = "0.18"

# Secrets management (optional cloud backends — gate via cargo features)
vaultrs = { version = "0.8", optional = true }
aws-config = { version = "1.8", features = ["behavior-version-latest"], optional = true }
aws-sdk-secretsmanager = { version = "1", optional = true }
google-cloud-secretmanager-v1 = { version = "1.8", optional = true }
azure_security_keyvault_secrets = { version = "0.14", optional = true }
azure_identity = { version = "0.35", optional = true }
azure_core = { version = "0.35", optional = true }

# GeoIP (geo_restriction plugin)
maxminddb = { version = "0.28", features = ["mmap"] }

# Redis (centralized rate limiting across multiple gateway instances)
redis = { version = "1", features = ["tokio-rustls-comp", "tls-rustls-insecure", "connection-manager"] }

# Kafka (kafka_logging plugin)
rdkafka = { version = "0.39", features = ["cmake-build", "zstd"] }

# MongoDB (NoSQL database backend)
mongodb = "3"

# DTLS 1.2/1.3 (secure UDP) — Sans-IO state machine
dimpl = { version = "0.6", features = ["aws-lc-rs", "rcgen"] }

# Memory allocator — jemalloc reduces fragmentation and improves throughput
# under high concurrency (50k+ connections). Not available on Windows.
[target.'cfg(not(windows))'.dependencies]
tikv-jemallocator = "0.6"

# recvmmsg/sendmmsg for batched UDP datagram I/O, io_uring for splice (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
io-uring = "0.7"

# ── Feature flags ──────────────────────────────────────────────────────────
# Cloud secret backends are optional.  Disabling them saves ~1,900 transitive
# crate compilations, which is useful for benchmark and perf-regression CI
# builds that never use external secret providers.
[features]
default = []
cloud-secrets = ["secrets-vault", "secrets-aws", "secrets-gcp", "secrets-azure"]
secrets-vault = ["dep:vaultrs"]
secrets-aws = ["dep:aws-config", "dep:aws-sdk-secretsmanager"]
secrets-gcp = ["dep:google-cloud-secretmanager-v1"]
secrets-azure = ["dep:azure_identity", "dep:azure_security_keyvault_secrets", "dep:azure_core"]

# ── Build profiles ─────────────────────────────────────────────────────────
# Dev: optimise for fast compile-edit-run cycles
[profile.dev]
opt-level = 0
debug = true            # full debuginfo for local development
incremental = true      # incremental compilation for faster rebuilds
# Split debuginfo to speed up linking (macOS/Linux)
split-debuginfo = "unpacked"

# Release: optimise for runtime performance
[profile.release]
opt-level = 3
lto = "fat"             # fat LTO: full cross-crate inlining for maximum hot-path perf
codegen-units = 1       # single codegen unit for best LLVM optimization
strip = true            # strip symbols — smaller binary
incremental = false     # disable incremental for deterministic release builds
panic = "abort"         # no unwind tables — smaller binary, faster error paths

# CI-specific: fast release builds for testing (not shipping)
[profile.ci-release]
inherits = "release"
lto = "off"             # skip LTO entirely — biggest time saver
codegen-units = 256     # maximise codegen parallelism
strip = true
opt-level = 2           # still optimised, but less aggressive

# Maximum-performance: for production shipping builds and benchmarks.
# Fat LTO + single codegen unit enables whole-program optimisation across
# all crates. Compile time is 3-5× slower than `release` but yields 5-10%
# better runtime throughput.
[profile.max-perf]
inherits = "release"
lto = "fat"             # full inter-module LTO (cross-crate inlining, DCE)
codegen-units = 1       # single codegen unit for maximum optimiser visibility
panic = "abort"         # skip unwind tables — smaller binary, faster panics

[build-dependencies]
tonic-prost-build = "0.14.5"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
# Functional testing dependencies
rand = "0.10"
futures = "0.3"
rcgen = "0.14"
rstest = "0.26"
time = "0.3"
# Phase 6 cross-protocol matrix macro: concatenates idents at macro
# expansion to generate one #[tokio::test] per (frontend, backend)
# combination. Pure proc-macro, zero runtime cost.
paste = "1"
# Scripted-backend Phase 2 — HTTP/2 frame-level control via the `h2` crate's
# server API. Hyper uses h2 0.4 transitively; pinning it here makes the test
# framework's dependency explicit.
h2 = "0.4"
# Simple HTTP server dependencies
tokio = { version = "1", features = ["net", "io-util", "time", "rt"] }
