[package]
name = "backend_server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "backend_server"
path = "backend_server.rs"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2"
