[package]
name = "pingora-bench-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pingora-bench-proxy"
path = "src/main.rs"

[dependencies]
pingora-core = { version = "0.8", features = ["rustls"] }
pingora-proxy = { version = "0.8", features = ["rustls"] }
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"
